--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,21 +4,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lighter_main_blue"
+    android:background="@color/off_white"
     tools:context=".activities.SearchActivity">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="372dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="430dp"
-        android:background="@drawable/card_view_edge"
-        app:cardCornerRadius="15dp"
+        android:id="@+id/cardView3"
+        android:layout_width="364dp"
+        android:layout_height="216dp"
+        android:layout_marginBottom="24dp"
+        app:cardBackgroundColor="@color/main_blue"
+        app:cardCornerRadius="40dp"
+        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/questionTextView">
+        app:layout_constraintTop_toBottomOf="@+id/question_card_view">
+
+        <TextView
+            android:id="@+id/questionTextView2"
+            android:layout_width="204dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="Suggestions for you"
+            android:textAlignment="viewEnd"
+            android:textColor="@color/darker_main_blue"
+            android:textSize="18sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trends_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="121dp"
+            android:layout_gravity="bottom|center"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="24dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/settingButton"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="370dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="100dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/gear_icon" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="157dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="240dp"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="@font/comfortaa_bold"
+        android:text="Home"
+        android:textColor="@color/darker_main_blue"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="355dp"
+        android:layout_height="49dp"
+        android:layout_marginBottom="300dp"
+        android:background="@drawable/card_view_edge"
+        app:cardBackgroundColor="@color/main_blue"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,7 +97,7 @@
 
             <SearchView
                 android:id="@+id/search_view"
-                android:layout_width="wrap_content"
+                android:layout_width="302dp"
                 android:layout_height="match_parent"
                 android:iconifiedByDefault="false"
                 android:queryHint="@string/search_hint"
@@ -40,7 +110,7 @@
             <ImageView
                 android:id="@+id/speech_button"
                 android:layout_width="15dp"
-                android:layout_height="35dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 app:srcCompat="@android:drawable/ic_btn_speak_now" />
@@ -49,60 +119,56 @@
 
     </androidx.cardview.widget.CardView>
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="381dp"
-        android:layout_height="92dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/question_card_view"
+        android:layout_width="373dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/newbear_logo" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="104dp"
+            android:layout_height="231dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/question_iimage" />
+
+        <TextView
+            android:id="@+id/questionTextView"
+            android:layout_width="261dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:fontFamily="@font/comfortaa_bold"
+            android:text="Question"
+            android:textAlignment="textStart"
+            android:textColor="@color/darker_main_blue"
+            android:textSize="18sp" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/questionTextView"
-        android:layout_width="320dp"
+        android:id="@+id/questionTextView4"
+        android:layout_width="323dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginStart="19dp"
+        android:layout_marginEnd="69dp"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Question"
-        android:textColor="@color/darker_main_blue"
-        android:textSize="20sp"
+        android:text="Search keywords to find fact checked articles related to your search!"
+        android:textAlignment="textStart"
+        android:textColor="@color/main_blue"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.236"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/trends_recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        app:layout_constraintVertical_bias="1.0">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/trends_recycler_view2"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
