--- a/app/src/main/res/layout/custom_trend_layout.xml
+++ b/app/src/main/res/layout/custom_trend_layout.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="156dp"
-        android:layout_height="152dp"
+        android:layout_width="136dp"
+        android:layout_height="132dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -17,21 +17,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/top_pics_template" />
+        app:srcCompat="@drawable/speechbubbleemoji" />
 
     <TextView
         android:id="@+id/title_text_view"
-        android:layout_width="118dp"
-        android:layout_height="72dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginTop="58dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="105dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/comfortaa_bold"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/darker_main_blue"
-        android:textSize="16dp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
