--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,39 +9,52 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
-        android:layout_width="364dp"
-        android:layout_height="216dp"
+        android:layout_width="376dp"
+        android:layout_height="192dp"
         android:layout_marginBottom="24dp"
         app:cardBackgroundColor="@color/main_blue"
         app:cardCornerRadius="40dp"
-        app:cardElevation="0dp"
+        app:cardElevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/question_card_view">
 
-        <TextView
-            android:id="@+id/questionTextView2"
-            android:layout_width="204dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginTop="32dp"
-            android:fontFamily="@font/comfortaa_bold"
-            android:text="Suggestions for you"
-            android:textAlignment="viewEnd"
-            android:textColor="@color/darker_main_blue"
-            android:textSize="18sp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/trends_recycler_view"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="121dp"
-            android:layout_gravity="bottom|center"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="24dp">
+            android:layout_height="match_parent">
 
-        </androidx.recyclerview.widget.RecyclerView>
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="328dp"
+                android:layout_height="33dp"
+                android:layout_marginTop="8dp"
+                android:background="#00FFFFFF"
+                android:fontFamily="@font/comfortaa_bold"
+                android:gravity="bottom"
+                android:text="Topics on the news:"
+                android:textColor="@color/darker_main_blue"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toTopOf="@+id/trends_recycler_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/trends_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="121dp"
+                android:layout_gravity="bottom|center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9">
+
+            </androidx.recyclerview.widget.RecyclerView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <ImageView
@@ -49,7 +62,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="370dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="100dp"
         android:visibility="visible"
@@ -59,23 +72,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/gear_icon" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="157dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="240dp"
-        android:layout_marginBottom="100dp"
-        android:fontFamily="@font/comfortaa_bold"
-        android:text="Home"
-        android:textColor="@color/darker_main_blue"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="355dp"
@@ -84,7 +80,7 @@
         android:background="@drawable/card_view_edge"
         app:cardBackgroundColor="@color/main_blue"
         app:cardCornerRadius="25dp"
-        app:cardElevation="0dp"
+        app:cardElevation="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +106,7 @@
             <ImageView
                 android:id="@+id/speech_button"
                 android:layout_width="15dp"
-                android:layout_height="40dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 app:srcCompat="@android:drawable/ic_btn_speak_now" />
@@ -124,51 +120,65 @@
         android:layout_width="373dp"
         android:layout_height="83dp"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
-        app:cardElevation="0dp"
+        app:cardElevation="3dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="104dp"
-            android:layout_height="231dp"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/question_iimage" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/questionTextView"
-            android:layout_width="261dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
-            android:fontFamily="@font/comfortaa_bold"
-            android:text="Question"
-            android:textAlignment="textStart"
-            android:textColor="@color/darker_main_blue"
-            android:textSize="18sp" />
+            <TextView
+                android:id="@+id/questionTextView"
+                android:layout_width="253dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="30dp"
+                android:fontFamily="@font/comfortaa_bold"
+                android:text="Question"
+                android:textAlignment="textStart"
+                android:textColor="@color/darker_main_blue"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imageView8"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="104dp"
+                android:layout_height="231dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/questionTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/question_iimage" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/questionTextView4"
-        android:layout_width="323dp"
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right|center_vertical"
-        android:layout_marginStart="19dp"
-        android:layout_marginEnd="69dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         android:fontFamily="@font/comfortaa_bold"
-        android:text="Search keywords to find fact checked articles related to your search!"
-        android:textAlignment="textStart"
-        android:textColor="@color/main_blue"
-        android:textSize="14sp"
+        android:text="NewsBear"
+        android:textColor="@color/darker_main_blue"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
